[package]
name = "conwasm"
version = "0.1.0"
authors = ["BenHall-7 <benjaminjahall@gmail.com>"]
edition = "2018"

[lib]
name = "conwasm"
path = "src/lib.rs"

[workspace]
members = [ "conway" ]

[dependencies]
wasm-bindgen = "0.2"
diff-struct = "0.2"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"