[package]
name = "conwasm"
version = "0.1.0"
authors = ["BenHall-7 <benjaminjahall@gmail.com>"]
edition = "2018"

[lib]
name = "conwasm"
path = "src/lib.rs"

[workspace]
members = [ "conway" ]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
conway = { path = "conway" }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'MouseEvent',
  'Node',
  'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"